-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.12.4
-
Mac Desktop
-
-
e757445355dbb3f3001fae49bb72113d7a52173d, d064dbf2d (dev), c11a43729 (6.6), 427e7feda (tqtc/lts-6.5)
If multiple number of charts stacked vertically in a scroll area then using trackpad on mac vertical scrolling is not possible If mouse is over the chart. This works good when mouse is not over chart but other empty widget area.
Attached example reproduces this problem.
- resulted in
-
QTBUG-119712 QChartView prevents parent QScrollView from receiving touch screen scroll events.
-
- Closed
-
| For Gerrit Dashboard: QTBUG-77403 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 276778,4 | Fix trackpad scrolling on macOS | 5.13 | qt/qtcharts | Status: MERGED | +2 | 0 |
| 524025,2 | Unbreak wheel event handling in QChartView | dev | qt/qtcharts | Status: MERGED | +2 | 0 |
| 524091,2 | Unbreak wheel event handling in QChartView | 6.6 | qt/qtcharts | Status: MERGED | +2 | 0 |
| 524128,2 | Unbreak wheel event handling in QChartView | tqtc/lts-6.5 | qt/tqtc-qtcharts | Status: MERGED | +2 | 0 |