Fix trackpad scrolling on macOS

Task-number: QTBUG-77403
Change-Id: I8c6431412ba4b554affa69578b1c2ca3e08c7a7f
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>